--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,1 @@
-cffi==1.16.0
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.1
-cryptography==42.0.7
-cycler==0.12.1
-filelock==3.14.0
-flwr==1.8.0
-fonttools==4.51.0
-fsspec==2024.3.1
-grpcio==1.63.0
-iterators==0.0.2
-Jinja2==3.1.4
-joblib==1.4.2
-kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.3
-numpy==1.26.4
-packaging==24.0
-pillow==10.3.0
-protobuf==4.25.3
-pycparser==2.22
-pycryptodome==3.20.0
-Pygments==2.18.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-rich==13.7.1
-scikit-learn==1.4.2
-scipy==1.13.0
-shellingham==1.5.4
-six==1.16.0
-sympy==1.12
-threadpoolctl==3.5.0
-tomli==2.0.1
-torch==2.3.0
-torch-vision==0.1.6.dev0
-tqdm==4.66.4
-typer==0.9.4
-typing_extensions==4.11.0
+certifi==2024.2.2
