Add fedproxy and fix mediator for all agents

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ output.old
 executions first article
 article images
 output article
+runs
+experiments
+old_run
+runs_200x200
+runs_low_success_rate-10-01-25
+analysis_results
